--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         .referencia-item a { color: #3498db; text-decoration: none; font-weight: 500; }
         .referencia-item a:hover { color: #2980b9; text-decoration: underline; }
         .footer { background: #f4f7fa; text-align: center; padding: 25px 10px 15px 10px; border-top: 2px solid #e1e5e9; margin-top: 40px; color: #7f8c8d; }
+        .twitter-section { text-align: center; padding: 15px; margin-bottom: 10px; }
+        .twitter-link { display: inline-flex; align-items: center; gap: 8px; color: #111; text-decoration: none; font-weight: 600; font-size: 1.1em; transition: all 0.3s ease; }
+        .twitter-link:hover { color: #0d8bd9; transform: translateY(-1px); }
+        .twitter-icon { width: 24px; height: 24px; }
         .ai-option-note { font-size: 0.9em; color: #666; margin-top: 10px; font-style: italic; }
         .pressure-status { font-size: 1.3em; font-weight: bold; margin-top: 15px; padding: 10px; border-radius: 8px; text-align: center; }
         .pressure-status.normal { background: rgba(255,255,255,0.2); color: white; }
@@ -183,6 +187,14 @@
                 </div>
             </div>
         </div>
+        <div class="twitter-section">
+            <a href="https://x.com/atomasyoung" target="_blank" rel="noopener" class="twitter-link">
+                <svg class="twitter-icon" viewBox="0 0 1200 1227" fill="currentColor">
+                    <path d="M714.163 519.284L1160.89 0H1055.03L667.137 450.887L357.328 0H0L468.492 681.821L0 1226.37H105.866L515.491 750.218L842.672 1226.37H1200L714.137 519.284H714.163ZM569.165 687.828L521.697 619.934L144.011 79.6944H306.615L611.412 515.685L658.88 583.579L1055.08 1150.3H892.476L569.165 687.854V687.828Z"/>
+                </svg>
+                @atomasyoung
+            </a>
+        </div>
         <div class="footer">
             <p>Calculadora basada en las guías ASE para evaluación de función diastólica</p>
         </div>
@@ -264,7 +276,7 @@
             const tipoAI = document.getElementById('tipoAI').value;
 
             if (eSeptal === 0 || eLateral === 0 || edad === 0) {
-                alert('Por favor, complete al menos los valores de e\' septal, e\' lateral y edad del paciente.');
+                alert('Por favor, complete al menos los valores de e\\' septal, e\\' lateral y edad del paciente.');
                 return;
             }
 
@@ -449,7 +461,7 @@
                     if (trAlterado) alterados++;
                     if (alterados >= 2) {
                         grado = 'Grado II (patrón pseudonormal)';
-                        gradoDetalle = 'E/A 0.8-2.0 y ≥2 de: E/e\'>14, AI alterada, TR>2.8 m/s';
+                        gradoDetalle = 'E/A 0.8-2.0 y ≥2 de: E/e\\'>14, AI alterada, TR>2.8 m/s';
                     } else {
                         grado = 'Normal';
                         gradoDetalle = 'Patrón de llenado normal';
@@ -576,4 +588,4 @@
         });
     </script>
 </body>
-</html>
+</html>'''
