--- a/index.html
+++ b/index.html
@@ -669,116 +669,4 @@
         });
     </script>
 </body>
-</html>'''
-
-# Guardar el archivo HTML PWA
-with open('index.html', 'w', encoding='utf-8') as f:
-    f.write(html_pwa_content)
-
-print("✅ Archivo HTML PWA generado: index.html")
-Output
-output
-Copy Code
-✅ Archivo HTML PWA generado: index.html
-index.html
-
-Ahora voy a crear los archivos adicionales que necesitas para la PWA:
-
-Code
-python
-Copy Code
-# Crear manifest.json
-manifest_content = '''{
-  "name": "Calculadora Función Diastólica ASE 2025",
-  "short_name": "Diastólica ASE",
-  "start_url": ".",
-  "display": "standalone",
-  "background_color": "#764ba2",
-  "theme_color": "#3498db",
-  "description": "Calculadora de función diastólica basada en las guías ASE 2025. Evalúa parámetros ecocardiográficos para diagnóstico de disfunción diastólica.",
-  "icons": [
-    {
-      "src": "https://cdn.abacus.ai/images/1912c19c-7286-4ead-8eeb-256d2eb8b2d0.png",
-      "sizes": "1024x1024",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "https://cdn.abacus.ai/images/1912c19c-7286-4ead-8eeb-256d2eb8b2d0.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "https://cdn.abacus.ai/images/1912c19c-7286-4ead-8eeb-256d2eb8b2d0.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ],
-  "lang": "es",
-  "orientation": "portrait",
-  "categories": ["medical", "health", "productivity", "utilities"],
-  "screenshots": [
-    {
-      "src": "https://cdn.abacus.ai/images/1912c19c-7286-4ead-8eeb-256d2eb8b2d0.png",
-      "sizes": "1024x1024",
-      "type": "image/png"
-    }
-  ]
-}'''
-
-# Crear service-worker.js
-service_worker_content = '''const CACHE_NAME = "diastolica-ase-v1.0";
-const urlsToCache = [
-  "./",
-  "./index.html",
-  "./manifest.json",
-  "https://cdn.abacus.ai/images/1912c19c-7286-4ead-8eeb-256d2eb8b2d0.png"
-];
-
-// Install event - cache resources
-self.addEventListener("install", event => {
-  event.waitUntil(
-    caches.open(CACHE_NAME)
-      .then(cache => {
-        console.log("Opened cache");
-        return cache.addAll(urlsToCache);
-      })
-      .catch(error => {
-        console.error("Failed to cache resources:", error);
-      })
-  );
-});
-
-// Fetch event - serve from cache, fallback to network
-self.addEventListener("fetch", event => {
-  event.respondWith(
-    caches.match(event.request)
-      .then(response => {
-        // Return cached version or fetch from network
-        if (response) {
-          return response;
-        }
-        return fetch(event.request);
-      })
-      .catch(error => {
-        console.error("Fetch failed:", error);
-        // You could return a fallback page here
-      })
-  );
-});
-
-// Activate event - clean up old caches
-self.addEventListener("activate", event => {
-  event.waitUntil(
-    caches.keys().then(cacheNames => {
-      return Promise.all(
-        cacheNames.map(cacheName => {
-          if (cacheName !== CACHE_NAME) {
-            console.log("Deleting old cache:", cacheName);
-            return caches.delete(cacheName);
-          }
-        })
-      );
-    })
-  );
-});
+</html>
