--- a/index.html
+++ b/index.html
@@ -279,17 +279,61 @@
         }
         .pressure-status.normal { background: #eafaf1; color: var(--green);}
         .pressure-status.elevated { background: #fdeaea; color: var(--red);}
+        
         @media (max-width: 768px) {
             .container { margin: 0; border-radius: 0; }
-            .form-container { padding: 4px 1vw 4px 1vw; }
-            .form-card { padding: 4px 1px 1px 1px; margin-bottom: 3px;}
-            .input-row-group { flex-direction: column; gap: 0; }
-            .input-row { flex-direction: column; align-items: stretch; gap: 0; min-width: 0; margin-bottom: 2px;}
-            .input-row label { margin-bottom: 1px; }
-            .input-row input, .input-row select { width: 100%; }
-            .parameter-status { grid-template-columns: 1fr; gap: 0; margin-top: 2px;}
-            .parameter-item { padding: 3px 4px; font-size: 0.97em; margin-bottom: 0;}
-            .results { padding: 4px 1px; }
+            .form-container { padding: 2px 0.5vw 2px 0.5vw; }
+            .form-card { 
+                padding: 6px 2px 2px 2px; 
+                margin-bottom: 2px;
+            }
+            .form-card h3 {
+                font-size: 1em;
+                margin-bottom: 6px;
+            }
+            .input-row-group { 
+                flex-direction: column; 
+                gap: 0; 
+                margin: 0;
+            }
+            .input-row { 
+                flex-direction: column; 
+                align-items: stretch; 
+                gap: 0; 
+                min-width: 0; 
+                margin-bottom: 1px;
+                padding: 0;
+            }
+            .input-row label { 
+                margin-bottom: 1px; 
+                font-size: 0.97em;
+            }
+            .input-row input, .input-row select { 
+                width: 100%; 
+                font-size: 0.97em;
+                padding: 7px 7px;
+            }
+            .parameter-status { 
+                grid-template-columns: 1fr; 
+                gap: 0; 
+                margin-top: 2px;
+            }
+            .parameter-item { 
+                padding: 2px 3px; 
+                font-size: 0.95em; 
+                margin-bottom: 0;
+            }
+            .results { 
+                padding: 3px 1px; 
+            }
+            .info-box, .fa-warning, .fevi-warning, .tr-warning, .indeterminate-note, .age-reference, .recommendations {
+                padding: 7px 6px;
+                font-size: 0.97em;
+            }
+            .referencias {
+                padding: 7px 6px;
+                font-size: 0.97em;
+            }
         }
     </style>
 </head>
