--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         <div class="form-container">
             <div class="info-box">
                 <strong>📋 Instrucciones:</strong> Complete los parámetros ecocardiográficos disponibles. Todos los campos son opcionales. Los valores de velocidad deben estar en <b>cm/s</b> para E, A, e' y en <b>m/s</b> para la velocidad de regurgitación tricuspídea (TR).
-                <a id="openAlgInfo" class="alg-link" href="javascript:void(0)">¿Cómo funciona el algoritmo ASE 2025?</a>
+                <a id="openAlgInfo" class="alg-link" href="javascript:void(0)">¿Cómo funciona el algoritmo?</a>
             </div>
             <form id="diastolicForm">
                 <div class="form-card">
@@ -626,7 +626,7 @@
     <div id="algModal" class="modal">
         <div class="modal-content">
             <button class="modal-close" onclick="closeModal()">×</button>
-            <h2>🧠 Algoritmo ASE 2025 - Nuevo Flujo Diagnóstico</h2>
+            <h2>🧠 Algoritmo </h2>
             <div class="modal-body">
                 <h4>1. Flujo principal según la nueva guía</h4>
                 <p>El algoritmo ASE 2025 comienza evaluando <strong>e', E/e', y TR velocity</strong> como parámetros principales. Si hay discordancia, se evalúan parámetros adicionales.</p>
