--- a/index.html
+++ b/index.html
@@ -611,14 +611,20 @@
                     </p>
                 </div>
             </div>
-            <div class="twitter-section">
-                <a href="https://x.com/atomasyoung" target="_blank" rel="noopener" class="twitter-link">
-                    <svg class="twitter-icon" viewBox="0 0 1200 1227" fill="currentColor">
-                        <path d="M714.163 519.284L1160.89 0H1055.03L667.137 450.887L357.328 0H0L468.492 681.821L0 1226.37H105.866L515.491 750.218L842.672 1226.37H1200L714.137 519.284H714.163ZM569.165 687.828L521.697 619.934L144.011 79.6944H306.615L611.412 515.685L658.88 583.579L1055.08 1150.3H892.476L569.165 687.854V687.828Z"/>
-                    </svg>
-                    @atomasyoung
-                </a>
-            </div>
+            <div class="twitter-section" style="display: flex; justify-content: center; gap: 20px; padding: 10px; margin-bottom: 6px;">
+    <a href="https://x.com/atomasyoung" target="_blank" rel="noopener" class="twitter-link" style="display: inline-flex; align-items: center; gap: 8px; color: #111; text-decoration: none; font-weight: 600; font-size: 1.1em; transition: all 0.3s ease;">
+        <svg class="twitter-icon" viewBox="0 0 1200 1227" fill="currentColor" width="24" height="24" aria-hidden="true" focusable="false">
+            <path d="M714.163 519.284L1160.89 0H1055.03L667.137 450.887L357.328 0H0L468.492 681.821L0 1226.37H105.866L515.491 750.218L842.672 1226.37H1200L714.137 519.284H714.163ZM569.165 687.828L521.697 619.934L144.011 79.6944H306.615L611.412 515.685L658.88 583.579L1055.08 1150.3H892.476L569.165 687.854V687.828Z"/>
+        </svg>
+        @atomasyoung
+    </a>
+    <a href="https://www.linkedin.com/in/tomas-young" target="_blank" rel="noopener" class="linkedin-link" style="display: inline-flex; align-items: center; gap: 8px; color: #111; text-decoration: none; font-weight: 600; font-size: 1.1em; transition: all 0.3s ease;">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" fill="currentColor" width="24" height="24" aria-hidden="true" focusable="false">
+            <path d="M100.28 448H7.4V148.9h92.88zm-46.44-340.7a53.66 53.66 0 1 1 53.66-53.66 53.66 53.66 0 0 1-53.66 53.66zM447.9 448h-92.68V302.4c0-34.7-12.4-58.4-43.4-58.4-23.7 0-37.8 15.9-44 31.3-2.3 5.6-2.9 13.4-2.9 21.3V448h-92.68s1.2-270.1 0-297.1h92.68v42.1c12.3-19 34.3-46 83.4-46 60.9 0 106.7 39.8 106.7 125.4z"/>
+        </svg>
+        Tomas Young
+    </a>
+</div>
         </div>
     </div>
 
