--- a/index.html
+++ b/index.html
@@ -427,6 +427,8 @@
                 align-items: stretch;
                 margin-bottom: 8px;
                 min-width: 0;
+                flex: 1 1 auto !important;
+                min-width: 0 !important;
             }
             .input-row label {
                 font-size: 0.95em;
