--- a/index.html
+++ b/index.html
@@ -406,71 +406,72 @@
                 box-shadow: none;
             }
             .form-container {
-                padding: 12px 10px;
+                padding: 10px 8px; /* menos padding */
             }
             .form-card {
-                padding: 12px 10px 10px 10px;
-                margin-bottom: 12px;
+                padding: 10px 8px 8px 8px; /* menos padding */
+                margin-bottom: 10px; /* menos margen */
                 border: 1px solid var(--border);
                 box-shadow: none;
             }
             .form-card h3 {
-                font-size: 1.05em;
-                margin-bottom: 8px;
+                font-size: 1em;
+                margin-bottom: 6px;
             }
             .input-row-group {
                 flex-direction: column;
-                gap: 6px;
+                gap: 4px; /* menos gap */
             }
             .input-row {
                 flex-direction: column;
                 align-items: stretch;
-                margin-bottom: 8px;
+                margin-bottom: 6px; /* menos margen */
                 min-width: 0;
                 flex: 1 1 auto !important;
                 min-width: 0 !important;
             }
             .input-row label {
-                font-size: 0.95em;
-                margin-bottom: 4px;
+                font-size: 0.9em;
+                margin-bottom: 3px;
                 white-space: normal;
                 word-wrap: break-word;
             }
             .input-row input,
             .input-row select {
                 width: 100%;
-                font-size: 0.95em;
-                padding: 8px 10px;
+                font-size: 0.9em;
+                padding: 6px 8px; /* menos padding */
                 box-sizing: border-box;
             }
             .unit {
                 margin-left: 0;
-                font-size: 0.9em;
+                font-size: 0.85em;
                 color: var(--text-soft);
                 display: inline-block;
-                margin-top: 4px;
+                margin-top: 3px;
             }
             .calculate-btn {
                 width: 100%;
                 font-size: 1em;
-                padding: 14px 0;
+                padding: 12px 0; /* menos padding */
                 border-radius: 8px;
-                margin-top: 16px;
+                margin-top: 12px; /* menos margen */
                 box-shadow: none;
             }
             .results {
-                padding: 14px 12px;
-                font-size: 0.95em;
+                padding: 12px 10px;
+                font-size: 0.9em;
             }
             .parameter-status {
                 grid-template-columns: 1fr;
-                gap: 6px;
-                margin-top: 10px;
+                gap: 4px;
+                margin-top: 8px;
             }
             .parameter-item {
-                font-size: 0.9em;
-                padding: 6px 8px;
+                font-size: 0.85em;
+                padding: 5px 7px;
                 word-wrap: break-word;
+                margin-bottom: 4px;
             }
             .info-box,
             .referencias,
@@ -481,13 +482,13 @@
             .age-reference,
             .recommendations,
             .missing-params-warning {
-                font-size: 0.9em;
-                padding: 8px 10px;
+                font-size: 0.85em;
+                padding: 6px 8px;
             }
             .modal-content {
                 margin: 10px 5px;
                 max-width: 95vw;
-                padding: 20px 16px;
+                padding: 18px 14px;
                 max-height: 90vh;
             }
             .modal-table {
